Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
@@ -177,165 +177,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "da967e28-3b98-4663-99cf-0c5ce3cd1eb2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Display resource (CPU/memory) usage.\n",
-      "\n",
-      " The top command allows you to see the resource consumption for nodes or pods.\n",
-      "\n",
-      " This command requires Metrics Server to be correctly configured and working on\n",
-      "the server.\n",
-      "\n",
-      "Available Commands:\n",
-      "  node          Display resource (CPU/memory) usage of nodes\n",
-      "  pod           Display resource (CPU/memory) usage of pods\n",
-      "\n",
-      "Usage:\n",
-      "  kubectl top [flags] [options]\n",
-      "\n",
-      "Use \"kubectl top <command> --help\" for more information about a given command.\n",
-      "Use \"kubectl options\" for a list of global command-line options (applies to all\n",
-      "commands).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl top "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "39ea7109-fe61-4208-b051-a15a4c7ee763",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME                                                         READY   STATUS    RESTARTS   AGE\n",
-      "grafana-k8s-monitoring-grafana-agent-0                       2/2     Running   0          15m\n",
-      "grafana-k8s-monitoring-grafana-agent-logs-n6xfs              2/2     Running   0          16m\n",
-      "grafana-k8s-monitoring-kube-state-metrics-7c5b5d844c-zf22h   1/1     Running   0          16m\n",
-      "grafana-k8s-monitoring-opencost-fdd5b98cb-z6w85              1/1     Running   0          16m\n",
-      "grafana-k8s-monitoring-prometheus-node-exporter-q2np7        1/1     Running   0          16m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl get pods "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "1d21965a-7d3c-4923-bd84-99ddb48c9f83",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME                                        READY   UP-TO-DATE   AVAILABLE   AGE\n",
-      "grafana-k8s-monitoring-kube-state-metrics   1/1     1            1           16m\n",
-      "grafana-k8s-monitoring-opencost             1/1     1            1           16m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl get deployments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "508f0189-5287-4a50-b3eb-7742a556908f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME       STATUS   ROLES           AGE   VERSION\n",
-      "minikube   Ready    control-plane   19m   v1.27.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl get nodes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "4757694c-339f-44e6-9e9b-a9adc4bce651",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME                                                             READY   STATUS    RESTARTS   AGE\n",
-      "pod/grafana-k8s-monitoring-grafana-agent-0                       2/2     Running   0          16m\n",
-      "pod/grafana-k8s-monitoring-grafana-agent-logs-n6xfs              2/2     Running   0          16m\n",
-      "pod/grafana-k8s-monitoring-kube-state-metrics-7c5b5d844c-zf22h   1/1     Running   0          16m\n",
-      "pod/grafana-k8s-monitoring-opencost-fdd5b98cb-z6w85              1/1     Running   0          16m\n",
-      "pod/grafana-k8s-monitoring-prometheus-node-exporter-q2np7        1/1     Running   0          16m\n",
-      "\n",
-      "NAME                                                      TYPE        CLUSTER-IP      EXTERNAL-IP   PORT(S)    AGE\n",
-      "service/grafana-k8s-monitoring-grafana-agent              ClusterIP   10.111.250.87   <none>        80/TCP     16m\n",
-      "service/grafana-k8s-monitoring-grafana-agent-cluster      ClusterIP   None            <none>        80/TCP     16m\n",
-      "service/grafana-k8s-monitoring-grafana-agent-logs         ClusterIP   10.100.92.248   <none>        80/TCP     16m\n",
-      "service/grafana-k8s-monitoring-kube-state-metrics         ClusterIP   10.111.58.231   <none>        8080/TCP   16m\n",
-      "service/grafana-k8s-monitoring-opencost                   ClusterIP   10.98.4.197     <none>        9003/TCP   16m\n",
-      "service/grafana-k8s-monitoring-prometheus-node-exporter   ClusterIP   10.100.19.212   <none>        9100/TCP   16m\n",
-      "service/kubernetes                                        ClusterIP   10.96.0.1       <none>        443/TCP    19m\n",
-      "\n",
-      "NAME                                                             DESIRED   CURRENT   READY   UP-TO-DATE   AVAILABLE   NODE SELECTOR            AGE\n",
-      "daemonset.apps/grafana-k8s-monitoring-grafana-agent-logs         1         1         1       1            1           kubernetes.io/os=linux   16m\n",
-      "daemonset.apps/grafana-k8s-monitoring-prometheus-node-exporter   1         1         1       1            1           kubernetes.io/os=linux   16m\n",
-      "\n",
-      "NAME                                                        READY   UP-TO-DATE   AVAILABLE   AGE\n",
-      "deployment.apps/grafana-k8s-monitoring-kube-state-metrics   1/1     1            1           16m\n",
-      "deployment.apps/grafana-k8s-monitoring-opencost             1/1     1            1           16m\n",
-      "\n",
-      "NAME                                                                   DESIRED   CURRENT   READY   AGE\n",
-      "replicaset.apps/grafana-k8s-monitoring-kube-state-metrics-7c5b5d844c   1         1         1       16m\n",
-      "replicaset.apps/grafana-k8s-monitoring-opencost-fdd5b98cb              1         1         1       16m\n",
-      "\n",
-      "NAME                                                    READY   AGE\n",
-      "statefulset.apps/grafana-k8s-monitoring-grafana-agent   1/1     16m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl get all "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "5ab0d1b3-9efa-4d7f-ab57-8d68638ce965",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME              STATUS   AGE\n",
-      "default           Active   19m\n",
-      "kube-node-lease   Active   19m\n",
-      "kube-public       Active   19m\n",
-      "kube-system       Active   19m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl get namespaces"
    ]
@@ -343,7 +238,153 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "35076761-be7f-4b4f-beca-12917e91b557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### To test this let's build an app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "603b918f-f24d-4e40-910f-1f2c93fe73e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install streamlit -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a969668-662f-4e18-851f-139acff55458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile app.py\n",
+    "import streamlit as st\n",
+    "st.text(\"A simple app.\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60434356-d6aa-4b07-83f8-2ce4e7cd2062",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On GCp, create a new firewall TCP:8501\n",
+    "!streamlit run app.py --server.address \"0.0.0.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a3b9566-295a-4f90-9e1a-af3dbfc209da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile Dockerfile\n",
+    "FROM python\n",
+    "WORKDIR /app\n",
+    "COPY . /app\n",
+    "RUN pip install streamlit -q\n",
+    "EXPOSE 8501\n",
+    "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "091e25cb-4974-49c8-b52f-825b763ba52f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker build -t simple-app ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcf9b0db-e679-4196-a80f-180cdd0f0c6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1665b461-d307-40ba-b50e-748465766212",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker run -p 8501:8501 --name simple-app-container simple-app "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a3b3484-3ab0-4dfb-b202-ad53edc46522",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "# Create a Docker repository in Artifact Registry\n",
+    "gcloud artifacts repositories create docker-repo \\\n",
+    "    --repository-format=docker \\\n",
+    "    --location=us-west2 \\\n",
+    "    --description=\"Docker repository\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afb014a6-aab3-42c7-b7d0-77466adf0ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud builds submit \\\n",
+    "    --region=us-west2 \\\n",
+    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/docker-repo/simple-app:tag1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08e5943a-49bf-4639-86da-5546d33ecad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kubernetes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0768f3e1-273f-4c77-a60c-7e15b6261df8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl create namespace simple-app-namespace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83c88048-799f-4b70-87dd-f5addd805b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get all --namespace simple-app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a11e9a7d-3bf3-4503-a237-fa624e0a1fc1",
    "metadata": {},
    "outputs": [],
    "source": []
