Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
@@ -325,6 +325,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49b7758f-3ba2-4432-b581-fc7a59991525",
+   "metadata": {},
+   "source": [
+    "### (Option 1) Push to Artifact Registry "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0a3b3484-3ab0-4dfb-b202-ad53edc46522",
@@ -349,6 +357,30 @@
     "!gcloud builds submit \\\n",
     "    --region=us-west2 \\\n",
     "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/docker-repo/simple-app:tag1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d69f9e4-dbe3-4497-9497-d95f73e23a45",
+   "metadata": {},
+   "source": [
+    "### (Option 2) Push to Docker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05a5a986-47d1-4cb1-a56d-9c46ab73ea58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bce80e5-9049-4bed-8981-83109a97380a",
+   "metadata": {},
+   "source": [
+    "### Kubernetes Deployment and Service"
    ]
   },
   {
