Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
@@ -364,7 +364,9 @@
    "id": "8d69f9e4-dbe3-4497-9497-d95f73e23a45",
    "metadata": {},
    "source": [
-    "### (Option 2) Push to Docker"
+    "### (Option 2) Push to Docker Hub\n",
+    "\n",
+    "Reference: hub.docker.com"
    ]
   },
   {
@@ -373,7 +375,29 @@
    "id": "05a5a986-47d1-4cb1-a56d-9c46ab73ea58",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# docker login"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fe68002-7441-43be-b6c6-1f43f055980b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker build -t <DOCKER_HUB_ID>/simple_app ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d35a2b2d-4bd8-4f9b-a10c-10c1ac702199",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker push <DOCKER_HUB_ID>/simple_app"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -417,6 +441,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a11e9a7d-3bf3-4503-a237-fa624e0a1fc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl run simple-app --image=<DOCKER_HUB_ID>/simple_app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8bffd3c-c308-46c9-a20f-7332a82fb8e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl expose pod/simple-app --port 8501"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cfa06f0-12b5-4339-a70e-4e4167be5fce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get services "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fcbaab4-a3e5-4f80-bd45-4d642a87253a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl port-forward service/simple-app 8501:8501 --address \"0.0.0.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82e7ee2e-1262-4313-b2fd-33d10ead8601",
    "metadata": {},
    "outputs": [],
    "source": []
