Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
@@ -434,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl get all --namespace simple-app"
+    "!kubectl get all --namespace simple-app-namespace"
    ]
   },
   {
@@ -444,7 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl run simple-app --image=<DOCKER_HUB_ID>/simple_app"
+    "!kubectl run simple-app --image=<DOCKER_HUB_ID>/simple_app --namespace simple-app-namespace"
    ]
   },
   {
@@ -454,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl expose pod/simple-app --port 8501"
+    "!kubectl expose pod/simple-app --port 8501 --namespace simple-app-namespace"
    ]
   },
   {
@@ -464,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl get services "
+    "!kubectl get all --namespace simple-app-namespace"
    ]
   },
   {
@@ -474,13 +474,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl port-forward service/simple-app 8501:8501 --address \"0.0.0.0\""
+    "!kubectl port-forward service/simple-app 8501:8501 --address \"0.0.0.0\" --namespace simple-app-namespace"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82e7ee2e-1262-4313-b2fd-33d10ead8601",
+   "id": "b278f147-004d-4435-9d27-9b6c9e718558",
    "metadata": {},
    "outputs": [],
    "source": []
