Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
@@ -420,6 +420,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5a16011d-ec8e-4697-a05b-b7888691ff74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WIth namespace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0768f3e1-273f-4c77-a60c-7e15b6261df8",
    "metadata": {},
    "outputs": [],
@@ -483,7 +493,59 @@
    "id": "b278f147-004d-4435-9d27-9b6c9e718558",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# In default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98fa206c-bade-4658-8c08-e208d2d5fe49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e3764ea-9234-4551-9d0d-9c6437e0ea62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl run simple-app --image=<DOCKER_HUB_ID>/simple_app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5350007c-9ebd-4e44-8898-2cea327a165f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl expose pod/simple-app --port 8501"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e28eef4-3c78-4770-9346-76eddd64e06f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81b396f7-1724-4f71-a33f-b958789ea4d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl port-forward service/simple-app 8501:8501 --address \"0.0.0.0\""
+   ]
   }
  ],
  "metadata": {
