--- a/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
@@ -424,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# WIth namespace"
+    "# With simple-app-namespace namespace"
    ]
   },
   {
@@ -494,7 +494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# In default"
+    "# In default namespace"
    ]
   },
   {
