Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Grafana-Tutorial.ipynb
@@ -546,6 +546,29 @@
    "source": [
     "!kubectl port-forward service/simple-app 8501:8501 --address \"0.0.0.0\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc4f719d-9b8d-455f-9e08-cf6599bac772",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test\n",
+    "import time\n",
+    "\n",
+    "for i in range(1,100):\n",
+    "    !(curl <IP_ADDRESS>:8501) \n",
+    "    time.sleep(.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "957b3612-ac5e-48bc-8da7-390c0706d350",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
