Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/Basic-Py.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/Basic-Py.ipynb
@@ -13,10 +13,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0a21a8d8-9445-4cd3-881c-0860010d5a05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python Version\n",
+    "python -v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1660f0f3-e479-495a-ac7c-ac1f7de7b978",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "help()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9c854e5-d440-4c4c-ba7b-19c9fc8696fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c873618-99a3-45b4-8f21-c9cdc7f5df60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install a library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69dccd66-6a09-4340-845f-99fa73a9aa8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import library\n",
+    "import <LIBRARY_NAME>\n",
+    "from <LIBRARY_NAME> import <FUNCTION>\n",
+    "from <LIBRARY_NAME> import <FUNCTION> # All"
+   ]
   }
  ],
  "metadata": {
