Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/Basic-Py.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/Basic-Py.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Basic Python\n",
     "\n",
-    "Reference: docs.python.org"
+    "Reference: https://docs.python.org"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# Python Version\n",
-    "python -v"
+    "!python -V"
    ]
   },
   {
@@ -28,7 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help()"
+    "# Help\n",
+    "help()\n",
+    "help(<LIBRARY_NAME>)"
    ]
   },
   {
@@ -38,7 +40,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir()"
+    "# Print Directory\n",
+    "dir()\n",
+    "dir(LIBRARY_NAME)"
    ]
   },
   {
@@ -48,7 +52,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install a library"
+    "# Install a library\n",
+    "!pip install <LIBRARY_NAME> <...>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa1e0017-364c-470f-b823-2e58ec706434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pip Help\n",
+    "!pip help"
    ]
   },
   {
