Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/Docker (Python).ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/Docker (Python).ipynb
@@ -23,6 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make a diretory\n",
     "!mkdir simple-app-docker-py"
    ]
   },
@@ -33,6 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Change directory\n",
     "cd simple-app-docker-py"
    ]
   },
@@ -85,7 +87,32 @@
    "id": "59161163-8dc2-4136-9818-57413b5cbc1f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build an image\n",
+    "!docker build -t simple-app ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5b207ee-7a71-467e-b6c1-1226109a1f87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List images\n",
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "616db53a-851b-4580-92b5-6829968c04fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the app\n",
+    "!docker run simple-app"
+   ]
   },
   {
    "cell_type": "markdown",
