Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/Docker (Py).ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/Docker (Py).ipynb
@@ -34,24 +34,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change directory\n",
     "cd simple-app-docker-py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c77c5499-6613-4036-a4de-28f584526294",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting app.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Simple App\n",
@@ -60,18 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "977877b1-7fbf-4792-ae3e-4ba278a640b1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting Dockerfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "# Simple Docker\n",
@@ -120,6 +103,115 @@
    "metadata": {},
    "source": [
     "## Simple Streamlit App Docker Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc06c94f-d0ff-4496-b737-8fd7f444b28b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd ~/tech-stack/09-Py-for-Cloud-DevOps-SRE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57a3612a-ed5b-427e-9b7c-bcc1dc9c35f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a diretory\n",
+    "!mkdir simple-streamlit-app-docker-py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d09bbd0b-2771-4e6f-8fb6-56d0d134413c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd simple-streamlit-app-docker-py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "07eb6ad4-353e-4f5c-b8d4-8e0610d9e2d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing app.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile app.py\n",
+    "# Simple Streamlit App Docker Python\n",
+    "import streamlit as st\n",
+    "st.text(\"It's working.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "666a6dda-db11-4e55-b57d-3dde91624c02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing Dockerfile\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile Dockerfile\n",
+    "FROM python\n",
+    "WORKDIR /app\n",
+    "RUN pip install streamlit -q\n",
+    "COPY app.py .\n",
+    "EXPOSE 8501\n",
+    "CMD [\"streamlit\", \"run\", \"app.py\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80e051ee-7e11-4eae-bfe6-483b60123214",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build an image\n",
+    "!docker build -t simple-streamlit-app-docker-py ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44ac541d-d09b-4406-a5f8-7571c4df91dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List images\n",
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c909f486-7dd2-4a06-892f-9bb8e06f15c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the app\n",
+    "!docker run simple-streamlit-app-docker-py"
    ]
   },
   {
