Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/Docker (Py).ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/Docker (Py).ipynb
@@ -19,12 +19,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72450848-557c-46ed-8197-97e88631ef86",
+   "id": "f670a954-1156-415c-8f49-09ce7f2181be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make a diretory\n",
-    "!mkdir simple-app-docker-py"
+    "import os\n",
+    "dir_name = \"simple-app-docker-py\"\n",
+    "if dir_name in os.listdir():\n",
+    "    print(\"Directory is already created.\")\n",
+    "else:\n",
+    "    os.mkdir(dir_name)\n",
+    "    print(\"Successfully created.\")"
    ]
   },
   {
@@ -72,7 +77,7 @@
    "outputs": [],
    "source": [
     "# Build an image\n",
-    "!docker build -t simple-app ."
+    "!docker build -t simple-app . -q"
    ]
   },
   {
@@ -118,12 +123,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57a3612a-ed5b-427e-9b7c-bcc1dc9c35f4",
+   "id": "ab9c1dec-8251-4bd7-b2fd-717182af6711",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make a diretory\n",
-    "!mkdir simple-streamlit-app-docker-py"
+    "import os\n",
+    "dir_name = \"simple-streamlit-app-docker-py\"\n",
+    "if dir_name in os.listdir():\n",
+    "    print(\"Directory is already created.\")\n",
+    "else:\n",
+    "    os.mkdir(dir_name)\n",
+    "    print(\"Successfully created.\")"
    ]
   },
   {
@@ -138,18 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "3b0f489e-7e2b-4957-9b94-16206ba593c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install Streamlit\n",
+    "!pip install streamlit -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "07eb6ad4-353e-4f5c-b8d4-8e0610d9e2d7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing app.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Simple Streamlit App Docker Python\n",
@@ -159,18 +172,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "666a6dda-db11-4e55-b57d-3dde91624c02",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing Dockerfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -178,7 +183,7 @@
     "RUN pip install streamlit -q\n",
     "COPY app.py .\n",
     "EXPOSE 8501\n",
-    "CMD [\"streamlit\", \"run\", \"app.py\"]"
+    "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\"]"
    ]
   },
   {
