Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/Docker (Py).ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/Docker (Py).ipynb
@@ -194,7 +194,7 @@
    "outputs": [],
    "source": [
     "# Build an image\n",
-    "!docker build -t simple-streamlit-app-docker-py ."
+    "!docker build -t simple-streamlit-app-docker-py-image . -q"
    ]
   },
   {
@@ -215,17 +215,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run the app\n",
-    "!docker run simple-streamlit-app-docker-py"
+    "# Run the app in detached mode\n",
+    "!docker run -d -p 8501:8501 simple-streamlit-app-docker-py-image"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8417082a-b3b2-486d-8387-12c2ea1f0c5b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
