--- a/09-Py-for-Cloud-DevOps-SRE/API.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/API.ipynb
@@ -1,9 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "57867d65-bf32-4d75-8ee3-98866c7bb6a2",
+   "metadata": {},
+   "source": [
+    "# Application Programming Interface (API)\n",
+    "\n",
+    "* HTTP API\n",
+    "* REST API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aec93ba2-6a7e-4324-901d-7a97d5b83e1f",
+   "id": "c48edfd5-2cb5-4921-81d5-8dea4041f0a5",
    "metadata": {},
    "outputs": [],
    "source": []
