--- a/09-Py-for-Cloud-DevOps-SRE/Basic-Py.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/Basic-Py.ipynb
@@ -79,6 +79,18 @@
     "from <LIBRARY_NAME> import <FUNCTION>\n",
     "from <LIBRARY_NAME> import <FUNCTION> # All"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "acb25df9-911f-4e52-b305-023f28e99567",
+   "metadata": {},
+   "source": [
+    "# Pytho Data Types\n",
+    "str\n",
+    "list\n",
+    "bool\n",
+    "dict"
+   ]
   }
  ],
  "metadata": {
