--- a/09-Py-for-Cloud-DevOps-SRE/Docker (Py).ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/Docker (Py).ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "# Build an image\n",
-    "!docker build -t simple-app . -q"
+    "!docker build -t simple-app-image . -q"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "# Run the app\n",
-    "!docker run simple-app"
+    "!docker run simple-app-image"
    ]
   },
   {
