Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/requests.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/requests.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Requests Library Tutorial\n",
     "\n",
-    "Reference: requests.readthedocs.io"
+    "Reference: https://requests.readthedocs.io"
    ]
   },
   {
