Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/Basic-Py.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/Basic-Py.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce2789ac-1dd7-4dc4-9acc-e9680a715fd1",
+   "metadata": {},
+   "source": [
+    "## Basic"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0a21a8d8-9445-4cd3-881c-0860010d5a05",
@@ -46,6 +54,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a01da0dd-4720-4443-a1a7-79b895ed5ff8",
+   "metadata": {},
+   "source": [
+    "## Install Library"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6c873618-99a3-45b4-8f21-c9cdc7f5df60",
@@ -53,7 +69,39 @@
    "outputs": [],
    "source": [
     "# Install a library\n",
-    "!pip install <LIBRARY_NAME> <...>"
+    "!pip install <LIBRARY_NAME> [<...>]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50578a6c-7e3f-414b-9052-1dc167f27255",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile requirements.txt\n",
+    "<LIBRARY_NAME>\n",
+    "[<...>]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6a7332c-22ab-499d-bccf-5f7eed9b2c9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d83d65f-00b7-46c7-90a6-050e121265f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip freeze > requirements.txt"
    ]
   },
   {
@@ -75,7 +123,7 @@
    "outputs": [],
    "source": [
     "# Import library\n",
-    "import <LIBRARY_NAME>\n",
+    "import <LIBRARY_NAME> [, <...>]\n",
     "from <LIBRARY_NAME> import <FUNCTION>\n",
     "from <LIBRARY_NAME> import <FUNCTION> # All"
    ]
