Add and modify files

--- a/06-CICD-Tutorial/Jenkins-Tutorial/Jenkins-Get-Started.ipynb
+++ b/06-CICD-Tutorial/Jenkins-Tutorial/Jenkins-Get-Started.ipynb
@@ -5,9 +5,9 @@
    "id": "6f43155f-9696-4319-90fb-1c8dcb04fc03",
    "metadata": {},
    "source": [
-    "# 1 Sample Jenkins\n",
+    "# 1 Jenkins Get Started\n",
     "\n",
-    "Reference: jenkins.io/doc"
+    "Reference: https://jenkins.io/doc"
    ]
   },
   {
